--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
     /* text-shadow: 0 0 8px #0ff; */
     /* text-shadow: 1px 1px 2px black, 0 0 10px blue; */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-   
 }
 
 
@@ -38,7 +37,7 @@ html, body {
     object-fit: cover;
     z-index: -1;
     pointer-events: none;
-    background-color: black;
+    background-color: #000;
   }
 
   .bg {
